main: 基本复现了文章的选股策略和t检验部分

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# data文件夹下的文件不上传
+data/*
+
+#pdf文件不上传
+*.pdf
+
+#csv文件不上传
+*.csv
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
